force-app/main/default/objects/leaseworks__Assembly_Eligible_Event__c/leaseworks__Assembly_Eligible_Event__c.object-meta.xml
<CustomObject>
    <description>Historical shop visit details of all components.</description>
    <label>Assembly Event</label>
    <nameField>
        <label>Event Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Assembly Events</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>