force-app/main/default/objects/leaseworks__Assembly_Eligible_Event__c/fields/leaseworks__Asset_Id_F__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Asset_Id_F__c</fullName>
    <formula>CASESAFEID( leaseworks__Constituent_Assembly__r.leaseworks__Attached_Aircraft__c )</formula>
    <label>_2002 Asset Id</label>
    <type>Text</type>
</CustomField>