force-app/main/default/objects/leaseworks__Assembly_Eligible_Event__c/fields/leaseworks__Certified_By__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Certified_By__c</fullName>
    <label>Certified By</label>
    <length>80</length>
    <type>Text</type>
</CustomField>