force-app/main/default/objects/leaseworks__Assembly_Eligible_Event__c/fields/leaseworks__Claim_Reference_Date__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Claim_Reference_Date__c</fullName>
    <description>Deprecated</description>
    <formula>Null</formula>
    <label>Z_Unused_2009 Claim Reference Date</label>
    <type>Date</type>
</CustomField>