force-app/main/default/objects/leaseworks__Assembly_Eligible_Event__c/fields/leaseworks__Confirm_payment_by_CTO_CFO__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Confirm_payment_by_CTO_CFO__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Z_Unused_2009 Confirm Payment by CTO/CFO</label>
    <type>Checkbox</type>
</CustomField>