force-app/main/default/objects/leaseworks__Assembly_Eligible_Event__c/fields/leaseworks__Confirmed_the_Receipt_to_Lessee__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Confirmed_the_Receipt_to_Lessee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Z_Unused2009 Confrmd the Recpt to Lessee</label>
    <type>Checkbox</type>
</CustomField>