force-app/main/default/objects/leaseworks__Assembly_Eligible_Event__c/fields/leaseworks__Constituent_Assembly__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Constituent_Assembly__c</fullName>
    <description>Eligible Events Associated With The Constituent Assembly</description>
    <inlineHelpText>Component to which this event is associated to.</inlineHelpText>
    <label>Associated Assembly</label>
    <referenceTo>leaseworks__Constituent_Assembly__c</referenceTo>
    <relationshipLabel>Assembly Events</relationshipLabel>
    <relationshipName>Eligible_Events</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>