force-app/main/default/objects/leaseworks__Assembly_Eligible_Event__c/fields/leaseworks__Contract_Legal_Review_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Contract_Legal_Review_Approval_Date__c</fullName>
    <label>Z_Unused_2009 Contract / Legal Review</label>
    <type>Date</type>
</CustomField>