force-app/main/default/objects/leaseworks__Assembly_Eligible_Event__c/fields/leaseworks__CTO_Sign_off__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__CTO_Sign_off__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Z_Unused_2009 CTO Sign Off</label>
    <type>Checkbox</type>
</CustomField>