force-app/main/default/objects/leaseworks__Assembly_Eligible_Event__c/fields/leaseworks__Custom_PE_Record_Number__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Custom_PE_Record_Number__c</fullName>
    <description>This field shows numbering same as selected associated event record name on Assembly Event record.</description>
    <inlineHelpText>This field shows numbering same as selected associated event record name on Assembly Event record.</inlineHelpText>
    <label>_Custom PE Record Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>