force-app/main/default/objects/leaseworks__Assembly_Eligible_Event__c/fields/leaseworks__Cycles_Since_Last_Event__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Cycles_Since_Last_Event__c</fullName>
    <label>Cycles Since Last Event</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>