force-app/main/default/objects/leaseworks__Assembly_Eligible_Event__c/fields/leaseworks__Date_of_Installation__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Date_of_Installation__c</fullName>
    <description>Date of installation after shop visit</description>
    <inlineHelpText>Date of installation after shop visit. To be set manually when this date is relevant for MR Claim</inlineHelpText>
    <label>Date of Installation</label>
    <type>Date</type>
</CustomField>