force-app/main/default/objects/leaseworks__Assembly_Eligible_Event__c/fields/leaseworks__Date_Of_SV_Commencement__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Date_Of_SV_Commencement__c</fullName>
    <label>Date Of SV Commencement</label>
    <type>Date</type>
</CustomField>