force-app/main/default/objects/leaseworks__Assembly_Eligible_Event__c/fields/leaseworks__Dispute_Signed_Off_by_Technical_Head__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Dispute_Signed_Off_by_Technical_Head__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Z_Unused_2009 Dispute Signoff TechHead</label>
    <type>Checkbox</type>
</CustomField>