force-app/main/default/objects/leaseworks__Assembly_Eligible_Event__c/fields/leaseworks__Eligible_Claim_Amount__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Eligible_Claim_Amount__c</fullName>
    <formula>leaseworks__Y_Hidden_Eligible_Claim_Amount__c</formula>
    <inlineHelpText>Claim amount calculated based on the Event Tasks</inlineHelpText>
    <label>Eligible Claim Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>