force-app/main/default/objects/leaseworks__Assembly_Eligible_Event__c/fields/leaseworks__Event_Due_CSN_Override__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Event_Due_CSN_Override__c</fullName>
    <description>Historical Event CSN Date Override value entered by the user</description>
    <inlineHelpText>Historical Event CSN Date Override value entered by the user</inlineHelpText>
    <label>Event Due CSN Override</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>