force-app/main/default/objects/leaseworks__Assembly_Eligible_Event__c/fields/leaseworks__Event_Override_Source__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Event_Override_Source__c</fullName>
    <description>Historical Event Override Source value entered by the user</description>
    <inlineHelpText>Historical Event Override Source value entered by the user</inlineHelpText>
    <label>Event Override Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Operator</fullName>
            </value>
            <value>
                <fullName>External Consultancy</fullName>
            </value>
            <value>
                <fullName>Internal Expertise</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>