force-app/main/default/objects/leaseworks__Assembly_Eligible_Event__c/fields/leaseworks__Event_Type__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Event_Type__c</fullName>
    <description>Type of the event. e.g. 4C/6Y, 8C/12Y</description>
    <inlineHelpText>Type of the event. e.g. 4C/6Y, 8C/12Y</inlineHelpText>
    <label>Event Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>leaseworks__Assembly_Event_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>leaseworks__Event_Type_Global</valueSetName>
    </valueSet>
</CustomField>