force-app/main/default/objects/leaseworks__Assembly_Eligible_Event__c/fields/leaseworks__HPT_Payout__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__HPT_Payout__c</fullName>
    <label>Z_Unused_2106 HPT Payout</label>
    <summarizedField>leaseworks__Constt_Assembly_Eligible_Event_Invoice__c.leaseworks__HPT_Amount__c</summarizedField>
    <summaryForeignKey>leaseworks__Constt_Assembly_Eligible_Event_Invoice__c.leaseworks__Constt_Assembly_Eligible_Event__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>