force-app/main/default/objects/leaseworks__Assembly_Eligible_Event__c/fields/leaseworks__Incomplete_Internal_Use__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Incomplete_Internal_Use__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used for Internal Calculation of rollup summary for  Assembly fields TSO/CSO/TSLSV/CSLSV</description>
    <label>Z_Unused_2012_Incomplete (Internal Use)}</label>
    <type>Checkbox</type>
</CustomField>