force-app/main/default/objects/leaseworks__Assembly_Eligible_Event__c/fields/leaseworks__Latest_Event_F__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Latest_Event_F__c</fullName>
    <formula>leaseworks__End_Date__c ==  leaseworks__Constituent_Assembly__r.leaseworks__Y_Hidden_Last_Event_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Latest Event?</label>
    <type>Checkbox</type>
</CustomField>