force-app/main/default/objects/leaseworks__Assembly_Eligible_Event__c/fields/leaseworks__Legal_Comments__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Legal_Comments__c</fullName>
    <label>Z_Unused_2009 Legal Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>