force-app/main/default/objects/leaseworks__Assembly_Eligible_Event__c/fields/leaseworks__Minor_Event__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Minor_Event__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Minor Event as configured on the Maintenance Program Event page. Minor Events do not reset TSO/PR, CSO/PR values on the Assembly page</inlineHelpText>
    <label>Minor Event?</label>
    <type>Checkbox</type>
</CustomField>