force-app/main/default/objects/leaseworks__Assembly_Eligible_Event__c/fields/leaseworks__Next_Scheduled_Event_Due_Date_F__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Next_Scheduled_Event_Due_Date_F__c</fullName>
    <description>This is the next scheduled event date by adding &quot;never exceed period month&quot; from Maintenance Program Event to &quot;last event date&quot;. In case &quot;last event date&quot; is not available, &quot;date of manufacture&quot; will be used.</description>
    <formula>leaseworks__Next_Scheduled_Event_Due_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is the next scheduled event date by adding &quot;never exceed period month&quot; from Maintenance Program Event to &quot;last event date&quot;. In case &quot;last event date&quot; is not available, &quot;date of manufacture&quot; will be used.</inlineHelpText>
    <label>Next Scheduled Event Due (Date)</label>
    <type>Date</type>
</CustomField>