force-app/main/default/objects/leaseworks__Assembly_Eligible_Event__c/fields/leaseworks__Operator__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Operator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Select the operator under whose supervision this Shop Visit was conducted.</description>
    <inlineHelpText>Select the operator under whose supervision this Shop Visit was conducted.</inlineHelpText>
    <label>Operator</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Assembly Events (Account)</relationshipLabel>
    <relationshipName>Assembly_Events</relationshipName>
    <type>Lookup</type>
</CustomField>