force-app/main/default/objects/leaseworks__Assembly_Eligible_Event__c/fields/leaseworks__Override_Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Override_Total_Amount__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Z_Unused_2009 Override Total Amount</label>
    <type>Checkbox</type>
</CustomField>