force-app/main/default/objects/leaseworks__Assembly_Eligible_Event__c/fields/leaseworks__Projected_Event__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Projected_Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Associated Projected Event that is eligible for claim from this MR fund</inlineHelpText>
    <label>Associated Event</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Selected Associated Event is not related to the Assembly. Please clean the lookup and enter event again</errorMessage>
        <filterItems>
            <field>$Source.leaseworks__Constituent_Assembly__c</field>
            <operation>equals</operation>
            <valueField>leaseworks__Assembly_Event_Info__c.leaseworks__Constituent_Assembly__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>leaseworks__Assembly_Event_Info__c</referenceTo>
    <relationshipLabel>Assembly Events</relationshipLabel>
    <relationshipName>Historical_Events</relationshipName>
    <type>Lookup</type>
</CustomField>