force-app/main/default/objects/leaseworks__Assembly_Eligible_Event__c/fields/leaseworks__Release_Authority__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Release_Authority__c</fullName>
    <description>Enter the release certification authority with the approval number (e.g., EASA.145.XXXX) for reporting purposes.</description>
    <inlineHelpText>Enter the release certification authority with the approval number (e.g., EASA.145.XXXX) for reporting purposes.</inlineHelpText>
    <label>Release Authority</label>
    <length>120</length>
    <type>Text</type>
</CustomField>