force-app/main/default/objects/leaseworks__Assembly_Eligible_Event__c/fields/leaseworks__Selected_Assembly_MR_Info__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Selected_Assembly_MR_Info__c</fullName>
    <formula>null
/* HYPERLINK(&apos;/&apos; + Y_Hidden_Assembly_MR_Info__c, Y_Hidden_Assembly_MR_Info__r.Name, &apos;_blank;) */</formula>
    <label>Z_Unused_2009 Selected Supplemental Rent</label>
    <type>Text</type>
</CustomField>