force-app/main/default/objects/leaseworks__Assembly_Eligible_Event__c/fields/leaseworks__Technical_Head_Review_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Technical_Head_Review_Approval_Date__c</fullName>
    <label>Z_Unused_2009 TechHead Review Approve Dt</label>
    <type>Date</type>
</CustomField>