force-app/main/default/objects/leaseworks__Assembly_Eligible_Event__c/fields/leaseworks__Technical_Project__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Technical_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the associated tech project</description>
    <label>Technical Project</label>
    <referenceTo>leaseworks__Technical_Project__c</referenceTo>
    <relationshipName>Historical_Events</relationshipName>
    <type>Lookup</type>
</CustomField>