force-app/main/default/objects/leaseworks__Assembly_Eligible_Event__c/fields/leaseworks__TSN_CSN_Certified__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__TSN_CSN_Certified__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Confirm that the CSN and TSN entered are correct. TSLV/CSLV values will be reset based on your certification.</inlineHelpText>
    <label>_TSN/CSN Accuracy Certified</label>
    <type>Checkbox</type>
</CustomField>