force-app/main/default/objects/leaseworks__Assembly_Eligible_Event__c/fields/leaseworks__Type_P__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Type_P__c</fullName>
    <description>Type of Maintenance Event</description>
    <inlineHelpText>Type of Maintenance Event</inlineHelpText>
    <label>Z_Unused Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Overhaul/Performance Restoration</fullName>
                <default>true</default>
                <label>Overhaul/Performance Restoration</label>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>