force-app/main/default/objects/leaseworks__Assembly_Eligible_Event__c/fields/leaseworks__Y_Hidden_Available_Reference_Date__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Y_Hidden_Available_Reference_Date__c</fullName>
    <description>This field reflects the default MR Claim reference date as set on Supplemental Rent. Usually defined by the Lease Agreement</description>
    <inlineHelpText>This field reflects the default MR Claim reference date as set on Supplemental Rent. Usually defined by the Lease Agreement</inlineHelpText>
    <label>Z_Unused_2009 Available Reference Date</label>
    <length>100</length>
    <type>Text</type>
</CustomField>