force-app/main/default/objects/leaseworks__Assembly_Eligible_Event__c/fields/leaseworks__Y_Hidden_QualifiedClaim__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Y_Hidden_QualifiedClaim__c</fullName>
    <defaultValue>false</defaultValue>
    <label>_Qualified for Claim?</label>
    <type>Checkbox</type>
</CustomField>