force-app/main/default/objects/leaseworks__Assembly_Eligible_Event__c/fields/leaseworks__Y_Hidden_Rate_Basis__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Y_Hidden_Rate_Basis__c</fullName>
    <formula>null</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Z_Unused_2002 Rate Basis</label>
    <type>Text</type>
</CustomField>