force-app/main/default/objects/leaseworks__Assembly_Eligible_Event__c/recordTypes/leaseworks__Airframe.recordType-meta.xml
<RecordType>
    <fullName>leaseworks__Airframe</fullName>
    <active>false</active>
    <description>Airframe events</description>
    <label>Airframe</label>
</RecordType>