force-app/main/default/objects/leaseworks__Assembly_Eligible_Event__c/recordTypes/leaseworks__Assemblies.recordType-meta.xml
<RecordType>
    <fullName>leaseworks__Assemblies</fullName>
    <active>true</active>
    <description>Assembly events</description>
    <label>Assemblies</label>
</RecordType>