force-app/main/default/objects/leaseworks__Assembly_Eligible_Event__c/validationRules/leaseworks__Avoid_negative_values_on_tsn_csn_event.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__Avoid_negative_values_on_tsn_csn_event</fullName>
    <active>true</active>
    <description>To avoid negative value entry in TSN/CSN fields</description>
    <errorConditionFormula>OR(
AND(NOT(ISBLANK(leaseworks__TSN__c)),leaseworks__TSN__c&lt;0),
AND(NOT(ISBLANK(leaseworks__CSN__c)),leaseworks__CSN__c&lt;0),
AND(NOT(ISBLANK(leaseworks__APU_CSN__c)),leaseworks__APU_CSN__c&lt;0),
AND(NOT(ISBLANK(leaseworks__APU_TSN__c)),leaseworks__APU_TSN__c&lt;0)
)</errorConditionFormula>
    <errorMessage>TSN/CSN at Event cannot be negative.Cannot save the record</errorMessage>
</ValidationRule>