force-app/main/default/objects/leaseworks__Assembly_Eligible_Event__c/validationRules/leaseworks__InstallationDateBeforeReleaseDate.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__InstallationDateBeforeReleaseDate</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
!$Setup.leaseworks__LeaseWorksSettings__c.leaseworks__Disable_All_Triggers__c, 
OR( leaseworks__Date_of_Installation__c  &lt;  leaseworks__End_Date__c, 
leaseworks__Date_of_Installation__c &gt; TODAY() )
)</errorConditionFormula>
    <errorDisplayField>leaseworks__Date_of_Installation__c</errorDisplayField>
    <errorMessage>Date of Installation should be after Removal, Induction and Release and before future date</errorMessage>
</ValidationRule>