force-app/main/default/objects/leaseworks__Assembly_Eligible_Event__c/validationRules/leaseworks__ProjectedEventTypeNull.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__ProjectedEventTypeNull</fullName>
    <active>true</active>
    <description>Projected Type and Event Type can not be null or Blank</description>
    <errorConditionFormula>AND(
!$Setup.leaseworks__LeaseWorksSettings__c.leaseworks__Disable_All_Triggers__c,
ISBLANK(leaseworks__Projected_Event__c),
ISPICKVAL(leaseworks__Event_Type__c,&quot;&quot;),
NOT(OR(ISBLANK(leaseworks__Event_Type_F__c),ISNULL(leaseworks__Event_Type_F__c))),
NOT(OR(ISNULL(leaseworks__Y_Hidden_Maintenance_Program_Event__c),ISBLANK(leaseworks__Y_Hidden_Maintenance_Program_Event__c)))
)</errorConditionFormula>
    <errorMessage>Assembly Event is not valid as it should have either Event Type or Projected Event lookup. Please enter missing data and save again</errorMessage>
</ValidationRule>