force-app/main/default/objects/leaseworks__Assembly_Eligible_Event__c/validationRules/leaseworks__Release_Date_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__Release_Date_validation</fullName>
    <active>true</active>
    <description>Event cannot be due before manufacturing</description>
    <errorConditionFormula>leaseworks__End_Date__c  &lt;  leaseworks__Constituent_Assembly__r.leaseworks__Date_of_Manufacture__c</errorConditionFormula>
    <errorDisplayField>leaseworks__End_Date__c</errorDisplayField>
    <errorMessage>Please enter valid date as Manufacturing date is greater then Release date</errorMessage>
</ValidationRule>