force-app/main/default/objects/leaseworks__Assembly_Eligible_Event__c/validationRules/leaseworks__StartDate_Before_EndDate.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__StartDate_Before_EndDate</fullName>
    <active>true</active>
    <description>End date must be &gt;= Start date</description>
    <errorConditionFormula>AND(
!$Setup.leaseworks__LeaseWorksSettings__c.leaseworks__Disable_All_Triggers__c
, 
OR (leaseworks__End_Date__c &lt;  leaseworks__Start_Date__c, leaseworks__End_Date__c &gt;   TODAY() )

)</errorConditionFormula>
    <errorDisplayField>leaseworks__End_Date__c</errorDisplayField>
    <errorMessage>Release date cannot be before the Induction date or future date</errorMessage>
</ValidationRule>