force-app/main/default/objects/leaseworks__Assembly_Eligible_Event__c/validationRules/leaseworks__TSN_CSN_Mandatory_if_Certified.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__TSN_CSN_Mandatory_if_Certified</fullName>
    <active>false</active>
    <errorConditionFormula>false /*AND( TSN_CSN_Certified__c , OR( NULLVALUE( TSN__c , 0) &lt;=0,  NULLVALUE( CSN__c , 0) &lt;=0 ))*/</errorConditionFormula>
    <errorDisplayField>leaseworks__TSN_CSN_Certified__c</errorDisplayField>
    <errorMessage>Please ensure TSN and CSN are valid values.</errorMessage>
</ValidationRule>