force-app/main/default/objects/leaseworks__Assembly_Eligible_Event__c/validationRules/leaseworks__TSN_CSN_Mandatory_if_ReleaseDate.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__TSN_CSN_Mandatory_if_ReleaseDate</fullName>
    <active>false</active>
    <errorConditionFormula>false
/*AND(
!$Setup.LeaseWorksSettings__c.Disable_All_Triggers__c
, 

AND( !IsBlank(End_Date__c), OR( NULLVALUE( TSN__c , 0) &lt;=0,  NULLVALUE( CSN__c , 0) &lt;=0 ))

)*/</errorConditionFormula>
    <errorMessage>Please ensure TSN and CSN are valid values.</errorMessage>
</ValidationRule>